# brahma

./: Cargo.toml  README.md
.github/: CI.yml  FUNDING.yml
.github/workflows/: CI.yml
crates/brahma_graph/: Cargo.toml  README.md
crates/brahma_graph/example/: test.rs
crates/brahma_graph/src/: common.rs  graph.rs  lib.rs  node_bevy.rs  node_data.rs  node_flow.rs  node_fsm.rs  node_method.rs  node_type.rs  port_api.rs
crates/brahma_scribe/: Cargo.toml  README.md
crates/brahma_scribe/src/: fsm.rs  lane.rs  lib.rs  scribe.rs
crates/brahma_yantra/: Cargo.toml
crates/brahma_yantra/src/: components.rs  events.rs  lib.rs  stages.rs  systems.rs  traits.rs  types.rs  utils.rs  yantra.rs
example/: test.rs  tmp.ron
example/states/idle/: events.rs
src/: lib.rs  machine.rs  state_events.rs  traits.rs
src/ui/: components.rs  constants.rs  editor.rs  events.rs  lib.rs  materials.rs  node.rs  systems.rs
test/: Cargo.toml  main.rs  test.rs
test/brahma_logics/: bootstrap.rs  globals.rs  mod.rs
test/brahma_logics/sample_machine/: components.rs  events.rs  machine.rs  mod.rs  plugin.rs  systems.rs
test/brahma_logics/sample_machine/systems/: mod.rs
test/brahma_logics/sample_machine/systems/states/: mod.rs
test/brahma_logics/sample_machine/systems/states/A/: OnEnter.rs  OnExit.rs
test/brahma_logics/sample_machine/systems/states/B/: OnEnter.rs
test/brahma_logics/sample_machine/systems/states/Choice/: OnEnter.rs  OnUpdate.rs  mod.rs
test/brahma_logics/sample_machine/systems/states/Start/: OnEnter.rs  OnExit.rs  mod.rs
test/brahma_logics/sample_machine/systems/transitions/: mod.rs
test/brahma_logics/sample_machine/systems/transitions/Choice_TO_A/: OnSubmit.rs
test/brahma_logics/sample_machine/systems/transitions/Choice_TO_B/: OnSubmit.rs  mod.rs
test/brahma_logics/sample_machine/systems/transitions/Start_TO_Choice/: OnEnter.rs
test/brahma_logics/sample_machine_1/: components.rs  mod.rs  plugin.rs
