[package]
name = "brahma"
version = "0.0.1"
authors = ["Pradeep Kumar Rajamanickam <raj.pradeep.kumar@gmail.com>"]
exclude = ["crates/**/*",".github/**/*"]
edition = "2018"
description = "Visual code + fsm editor for rust/bevy"
license = "MIT"
keywords = ["state", "machine", "gamedev", "fsm", "bevy"]
categories = ["game-dev", "automaton", "productivity", "editor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
brahma_graph    = { path = "crates/brahma_graph" }
brahma_scribe   = { path = "crates/brahma_scribe" }